--- a/style.css
+++ b/style.css
@@ -1,161 +1,342 @@
 * {
-  padding: 0;
   margin: 0;
-  text-decoration: none;
-  list-style: none;
-  box-sizing: content-box;
+  padding: 0;
+  font-family: "Roboto", sans-serif;
 }
 
-body {
-  font-family: montserrat;
+
+
+.header {
+  min-height: 100vh;
+  width: 100%;
+  background-image: linear-gradient(rgba(4, 9, 30, 0.7), rgba(4, 9, 30, 0.7)),
+    url(images/backg.jpg);
+  background-position: center;
+  background-size: cover;
+  position: relative;
 }
 
 nav {
-  background: #150b41;
-  height: 80px;
-  width: 100%;
+  display: flex;
+  padding: 2% 3%;
+  justify-content: space-between;
+  align-items: center;
 }
-
-label.logo {
-  color: #f6f1f1;
-  font-size: 35px;
-  line-height: 80px;
-  padding: 0 100px;
-  font-weight: bold;
+nav img {
+  width: 150px;
 }
-
-nav ul {
-  float: right;
-  margin-right: 20px;
+nav a img{
+  float: left;
+  margin-left: 0;
+  width: 90px;
+  height: 100px;
 }
-
-nav ul li {
+.nav-links {
+  flex: 1;
+  text-align: right;
+}
+.nav-links ul li {
+  list-style: none;
   display: inline-block;
-  line-height: 80px;
-  margin: 0 5px;
+  padding: 8px 12px;
+  position: relative;
 }
-
-nav ul li a {
-  color: rgb(247, 243, 243);
-  font-size: 15px;
-  padding: 7px 13px;
-  text-transform: uppercase;
+.nav-links ul li a {
+  color: white;
+  text-decoration: none;
+  font-size: 13px;
 }
-
-a.active,
-a:hover {
-  background: #bf82f0;
+.nav-links ul li::after {
+  content: "";
+  width: 0%; /* to hide the underline */
+  height: 2px;
+  background: #dc1313;
+  display: block;
+  margin: auto;
   transition: 0.5s;
 }
-
-.checkbtn {
-  font-size: 30px;
-  color: #fcf8f8;
-  float: right;
-  line-height: 75px;
-  margin-right: 40px;
+.nav-links ul li:hover::after {
+  width: 100%;
+}
+.text-box {
+  width: 90%;
+  color: #fff;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
+.text-box h1 {
+  font-size: 60px;
   cursor: pointer;
-  display: inline;
+  transition: all 1s linear;
+}
+.text-box h1:hover {
+  background: linear-gradient(90deg, #f83c90,#62d0f2);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.text-box p {
+  margin: 10px 0 40px;
+  font-size: 14px;
+  color: #fff;
+}
+.hero-btn {
+  display: inline-block;
+  text-decoration: none;
+  color: #fff;
+  border: 1px solid #fff;
+  padding: 12px 34px;
+  font-size: 13px;
+  background: transparent;
+  position: relative;
+  cursor: pointer;
+}
+.hero-btn:hover {
+  border: 1px solid #f44336;
+  background: #f44336;
+  transition: 1s;
 }
 
-#check {
+nav .fa {
   display: none;
 }
-
-@media (max-width: 952px) {
-  label.logo {
-    font-size: 30px;
-    padding-left: 50px;
-  }
-  nav ul li a {
-    font-size: 15px;
-  }
-}
-
-@media (max-width: 858px) {
-  .checkbtn {
-    display: block;
-  }
-  ul {
-    position: fixed;
-    width: 100%;
-    height: 100vh;
-    color: hwb(0 16% 82%);
-    background: linear-gradient(-45deg, #b740cc, #f63bd1, #ee5cf3, #d6d0f0);
-    top: 80px;
-    left: 0;
-    text-align: center;
-    transition: all 0.5s;
-  }
-  nav ul li {
-    display: block;
-    margin: 50px;
-    line-height: 30px;
-  }
-  nav ul li a {
+@media (max-width: 700px) {
+  .text-box h1 {
     font-size: 20px;
   }
-  a:hover,
-  a.active {
-    background: none;
-    color: #d3dde4;
+  .nav-links ul li {
+    display: block;
   }
-  #check:checked ~ ul {
-    left: 0;
+  .nav-links {
+    position: absolute;
+    background: #f44336;
+    height: 100vh;
+    width: 200px;
+    top: 0;
+    right: -200px;
+    text-align: left;
+    z-index: 2;
+    transition: 1s;
+  }
+  nav .fa {
+    display: block;
+    color: #fff;
+    margin: 10px;
+    font-size: 22px;
+    cursor: pointer;
+  }
+  .nav-links ul {
+    padding: 30px;
   }
 }
 
-.sub-menu-l {
-  display: none;
-}
-/* People */
-nav ul li:hover .sub-menu-l {
+/* ------- Academics ------- */
 
-  display: grid;
+.academics {
+  width: 100%;
+  margin: auto;
+  text-align: center;
+  padding-top: 100px;
+}
+h1 {
+  font-size: 36px;
+  font-weight: 600;
+}
+p {
+  color: #777;
+  font-size: 14px;
+  font-weight: 300;
+  line-height: 22px;
+  padding: 10px;
+}
+
+.row {
+  margin-top: 5%;
+  display: flex;
+  justify-content: space-evenly;
+}
+.academics-col {
+  flex-basis: 31%;
+  background: #fff3f3;
+  border-radius: 10px;
+  margin-bottom: 5%;
+  padding: 20px 12px;
+  box-sizing: border-box;
+  cursor: pointer;
+  transition: 0.5s;
+}
+h3 {
+  text-align: center;
+  font-weight: 600;
+  margin: 10px 0;
+}
+.academics-col:hover {
+  box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.2);
+}
+
+@media (max-width: 700px) {
+  .row {
+    flex-direction: column;
+  }
+}
+
+/* ----- Research ------- */
+
+.research {
+  width: 80%;
+  margin: auto;
+  text-align: center;
+  padding-top: 50px;
+}
+.research-col {
+  flex-basis: 32%;
+  border-radius: 10px;
+  margin-bottom: 30px;
+  position: relative;
+  overflow: hidden;
+}
+.research-col img {
+  width: 100%;
+  display: block;
+}
+.layer {
+  background: transparent;
+  height: 100%;
+  width: 100%;
   position: absolute;
-  margin-top: 1px;
+  top: 0;
+  left: 0;
+  transition: 0.5s;
 }
-nav ul li:hover .sub-menu-l ul {
-  display: grid;
-  margin: 1px;
+.layer:hover {
+  background: rgba(226, 0, 0, 0.7);
 }
-nav ul li:hover .sub-menu-l ul li {
-  width: 190px;
-  padding: 2px;
-  background: none;
+.layer h3 {
+  width: 100%;
+  font-weight: 500;
+  color: #fff;
+  font-size: 26px;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  position: absolute;
+  opacity: 0;
+  transition: 0.5s;
+}
+.layer:hover h3 {
+  bottom: 49%;
+  opacity: 1;
+}
+
+/* ----- Facilities ------- */
+
+.facilities {
+  width: 100%;
+  margin: auto;
+  text-align: center;
+  padding-top: 100px;
+}
+
+.facilities-col {
+  flex-basis: 31%;
+  border-radius: 10px;
+  margin-bottom: 5%;
   text-align: left;
 }
-nav ul li:hover .sub-menu-l ul li a {
-    color: rgb(99, 40, 153);
-    font-size: 15px;
+.facilities-col img {
+  width: 100%;
+  border-radius: 10px;
+  display: block;
 }
-nav ul li:hover .sub-menu-l ul li a:hover {
-  color: #511a53;
+.facilities-col p {
+  padding: 0;
 }
-section {
-  /* background: url(images/image.png) no-repeat; */
+.facilities-col h3 {
+  margin-top: 16px;
+  margin-bottom: 15px;
+  text-align: left;
+}
+
+/* ----- Testimonials ------- */
+
+.testimonials {
+  width: 100%;
+  margin: auto;
+  text-align: center;
+  padding-top: 100px;
+}
+.testimonial-col {
+  flex-basis: 44%;
+  border-radius: 10px;
+  margin-bottom: 5%;
+  text-align: left;
+  background: #fff3f3;
+  padding: 25px;
+  cursor:pointer;
+  display: flex;
+}
+.testimonial-col img{
+  height: 40px;
+  margin-left: 5px;
+  margin-right: 30px;
+  border-radius: 50%;
+}
+.testimonial-col p{
+  padding: 0;
+}
+.testimonial-col h3{
+  margin-top: 15px;
+  text-align: left;
+}
+.testimonial-col .fa{
+  color:#f44336;
+}
+
+@media (max-width: 700px) {
+  .testimonial-col img{
+    margin-left: 0px;
+    margin-right: 15px;
+  }
+}
+
+/* ----- Call To Action ------- */
+
+.cta{
+  width: 80%;
+  margin: 100px auto;
+  background-image: linear-gradient(rgba(0,0,0,0.7),
+   rgba(0,0,0,0.7)),url(images/banner2.jpg);
+  background-position: center;
   background-size: cover;
-  height: calc(100vh - 80px);
+  border-radius: 10px;
+  text-align: center;
+  padding: 100px 0;
+}
+.cta h1{
+  color:#f44336;
+  margin-bottom: 40px;
+  padding: 0;
 }
 
+@media (max-width: 700px){
+  .cta h1{
+    font-size: 24px;
+  }
+}
 
+/* ----- Footer ------- */
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+.footer{
+  width: 100%;
+  margin: 100px auto;
+  text-align: center;
+  padding: 30px 0;
+}
+.icon .fa{
+  color: #f44336;
+  margin: 0 30px;
+  cursor: pointer;
+  padding: 18px 0;
+}
