--- a/style.css
+++ b/style.css
@@ -334,9 +334,9 @@ h3 {
   text-align: center;
   padding: 30px 0;
 }
-.icon .fa{
+.footer .icons i{
   color: #f44336;
   margin: 0 30px;
   cursor: pointer;
-  padding: 18px 0;
+  padding: 18px 20px;
 }
