--- a/faculties.css
+++ b/faculties.css
@@ -1,45 +1,48 @@
 * {
-    margin: 0;
-    padding: 0;
-    font-family: "Roboto", sans-serif;
-    background: linear-gradient(90deg, #f83c90,#62d0f2);
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: "Roboto", sans-serif;
+  background-image: url(images/pep.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  box-sizing: border-box;
 }
 
-.container1{
-    display: flex;
-    justify-content: center;
-    margin-top: 100px;
+.container1 {
+  display: flex;
+  justify-content: center;
+  margin-top: 100px;
 }
-.container2{
-    display: flex;
-    justify-content: center;
-    margin-top: 100px;
+.container2 {
+  display: flex;
+  justify-content: center;
+  margin-top: 100px;
 }
-.container3{
-    display: flex;
-    justify-content: center;
-    margin-top: 100px;
+.container3 {
+  display: flex;
+  justify-content: center;
+  margin-top: 100px;
 }
-.box{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-weight: bold;
-    font-size: 2.6rem;
-    position: relative;
-    width: 250px;
-    height: 80px;
-    background: #fff;
-    border: 1px solid rgba(59,58,58,.46);
-    border-radius: 20px;
+.box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: bold;
+  font-size: 2.6rem;
+  position: relative;
+  width: 250px;
+  height: 80px;
+  background: #fff;
+  border: 1px solid rgba(59, 58, 58, 0.46);
+  border-radius: 20px;
 }
-.box a{
-    color: black;
-    text-decoration: none;
-    cursor: pointer;
-    background: none;
+.box a {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+  background: none;
 }
-.box a:hover{
-    color: rgb(235, 99, 237);
+.box a:hover {
+  color: rgb(235, 99, 237);
 }
