--- a/faculties.css
+++ b/faculties.css
@@ -1,12 +1,8 @@
-* {
+body {
   margin: 0;
   padding: 0;
   font-family: "Roboto", sans-serif;
-  background-image: url(images/pep.png);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-  box-sizing: border-box;
+  background-image: linear-gradient(rgba(10, 18, 49, 0.7), rgba(4, 9, 30, 0.7)),url(images/pep.png);
 }
 
 .container1 {
